# GistFlow

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
docs/: CODE_REVIEW.md  DEV_READINESS.md  GUIDE.md  PROJECT_STRUCTURE.md  README.md
docs/spec/: .do.md  MANIFESTO.md
gistflow/: __init__.py
gistflow/config/: __init__.py  settings.py
gistflow/core/: __init__.py  cleaner.py  ingestion.py  llm_engine.py  local_publisher.py  publisher.py
gistflow/database/: __init__.py  local_store.py
gistflow/models/: __init__.py  schemas.py
gistflow/utils/: __init__.py  logger.py
gistflow/web/: __init__.py  api.py
gistflow/web/static/: index.html
prompts/: system_prompt.txt  user_prompt_template.txt
spec/: AI_GUIDELINES.md  prd.md  tech_init.md  tech_process.md
tests/: __init__.py  check_notion_db.py  test_config.py  test_ingestion.py  test_llm_engine.py  test_pipeline.py  test_publisher.py
