[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gistflow"
version = "0.1.0"
description = "Automated ETL pipeline for processing Gmail newsletters into structured Notion knowledge"
authors = [
    {name = "GistFlow Team"}
]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["newsletter", "gmail", "notion", "llm", "automation", "etl"]

dependencies = [
    # Email ingestion
    "imap-tools>=1.0.0",

    # HTML parsing and cleaning
    "beautifulsoup4>=4.12.0",
    "markdownify>=0.11.0",
    "lxml>=4.9.0",

    # LLM orchestration
    "langchain>=0.2.0",
    "langchain-core>=0.2.0",
    "langchain-openai>=0.1.0",

    # Data validation
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",

    # Notion API
    "notion-client>=2.2.0",

    # Scheduler
    "apscheduler>=3.10.0",

    # Logging
    "loguru>=0.7.0",

    # HTTP client (for LLM)
    "httpx>=0.27.0",

    # Retry mechanism
    "tenacity>=8.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "ruff>=0.4.0",
    "mypy>=1.9.0",
]

[project.scripts]
gistflow = "gistflow.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["gistflow*"]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true